finished project+task logic